<?xml version="1.0"?>
<package>
  <name>3d_face_features</name>
  <version>0.1.0</version>
  <description>Extract facial features from 3D images and republish them as 3D point cloud</description>

  <maintainer email="severin.lemaignan@plymouth.ac.uk">Séverin Lemaignan</maintainer>

  <license>BSD</license>
  <author >Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <!--<export>
      <nodelet plugin="${prefix}/nodelet_markers.xml"/>
  </export>
  -->
</package>
